# fckloud

./: Cargo.toml  Makefile  README.md  TODO.md
.github/workflows/: ghcr-build-push.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: app.rs  args.rs  build_info.rs  cmd_run.rs  cmd_test.rs  log.rs  main.rs
crates/ekacore/: Cargo.toml
crates/ekacore/src/traits/: discard.rs  mod.rs  not_ok.rs
crates/kubem/: Cargo.toml
crates/kubem/src/: kubem.rs  manager.rs
crates/ndhcp/: Cargo.toml
crates/ndhcp/src/: address.rs  is_reserved.rs  manager.rs  ndhcp.rs  providers.rs  trust_factor.rs  verifier.rs
deploy/: Dockerfile  k8s.yaml
