[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
# default-members = ["crates/cli"]
members = ["crates/cli", "crates/ndhcp", "crates/kubem"]

[workspace.dependencies]
clap = { version = "4.5.38", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["display", "debug"] }
hyper = { version = "1.6.0", features = ["client", "http1"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
local-ip-address = "0.6.5"
pnet = "0.35.0"
anyhow = "1.0.98"
reqwest = { version = "0.12.15", features = ["json"] }
bytes = "1.10.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["default", "time"] }
tokio = { version = "1.45.1", features = ["full"] }
smallvec = "1.15.1"
strum = "0.27.1"
strum_macros = "0.27.1"
futures = "0.3.31"
itertools = "0.14.0"
getset = "0.1.6"
time = { version = "0.3.41", features = [
    "local-offset",
    "formatting",
    "macros",
] }
kube = { version = "1.1.0", features = ["default", "derive"] }
k8s-openapi = { version = "0.25.0", features = ["v1_32"] }

[workspace.lints]
