[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
# default-members = ["crates/cli"]
members = ["crates/cli", "crates/ekacore", "crates/ndhcp", "crates/kubem"]

[workspace.dependencies]
clap = { version = "4.5.38", features = ["derive", "env"] }
derive_more = { version = "2.0.1", features = ["display", "debug"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
# miniserde = "0.1.42"
ipnet = "2.11.0"
anyhow = "1.0.98"
reqwest = { version = "0.12.15" }
bytes = "1.10.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["default", "chrono", "env-filter", "json"] }
tokio = { version = "1.45.1", features = ["full"] }
smallvec = "1.15.1"
strum = "0.27.1"
strum_macros = "0.27.1"
itertools = "0.14.0"
time = { version = "0.3.41", features = [
    "local-offset",
    "formatting",
    "macros",
] }
# duration-str = { version = "0.17.0", features = ["chrono", "calc"] }
kube = { version = "1.1.0", features = ["default", "derive"] }
k8s-openapi = { version = "0.25.0", features = ["v1_32"] }

[workspace.dependencies.chrono]
version = "0.4.41"

[workspace.dependencies.clokwerk]
version = "0.4.0"
features = ["async"]

[workspace.dependencies.humantime]
version = "2.2.0"

[workspace.dependencies.tracing-forest]
version = "0.1.6"
features = ["chrono", "ansi"]

[workspace.lints]

[profile.release]
strip = true
lto = true
opt-level = "s"
