[workspace.package]
version = "1.1.0"
edition = "2024"
authors = ["Ilya Stroy <inaneverb@pm.me>"]

[workspace]
resolver = "3"
members = ["crates/cli", "crates/ekacore", "crates/ndhcp", "crates/kubem"]

[workspace.dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
# chrono = { version = "0.4.41" }
clap = { version = "4.5.38", features = ["derive", "env", "cargo"] }
const_format = "0.2.34"
derive_more = { version = "2.0.1", features = ["display", "debug"] }
humantime = { version = "2.2.0" }
ipnet = "2.11.0"
k8s-openapi = { version = "0.25.0", features = ["v1_32"] }
kube = { version = "1.1.0", features = ["default", "derive"] }
reqwest = { version = "0.12.15" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
smallvec = "1.15.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "env-filter",
    "json",
] }
tokio = { version = "1.45.1", features = ["full"] }
vergen = { version = "9.0.6", features = ["build"] }
vergen-gitcl = { version = "1.0.8" }

[workspace.lints]

[profile.release]
strip = true
lto = true
opt-level = "s"
