[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fckloud"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clokwerk.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
humantime.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
tracing-forest.workspace = true
time.workspace = true
smallvec.workspace = true
# duration-str.workspace = true
strum.workspace = true

ndhcp = { path = "../ndhcp" }
kubem = { path = "../kubem" }
ekacore = { path = "../ekacore" }
