[package]
name = "fckloud"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fckloud"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
humantime.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
strum.workspace = true

ndhcp = { path = "../ndhcp" }
kubem = { path = "../kubem" }
ekacore = { path = "../ekacore" }
