[package]
name = "kubem"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
path = "src/kubem.rs"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
serde_json.workspace = true

ndhcp = {path = "../ndhcp"}