[package]
name = "kubem"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
path = "src/kubem.rs"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true

ndhcp = {path = "../ndhcp"}
ekacore = {path = "../ekacore"}