[package]
name = "ndhcp"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
path = "src/ndhcp.rs"

[dependencies]
pnet.workspace = true
anyhow.workspace = true
derive_more.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
local-ip-address.workspace = true
bytes.workspace = true
tracing.workspace = true
tokio.workspace = true
strum.workspace = true
strum_macros.workspace = true
smallvec.workspace = true
futures.workspace = true
itertools.workspace = true
getset.workspace = true