[package]
name = "ndhcp"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
path = "src/ndhcp.rs"

[dependencies]
ipnet.workspace = true
anyhow.workspace = true
derive_more.workspace = true
serde.workspace = true
serde_json.workspace = true
# miniserde.workspace = true
reqwest.workspace = true
bytes.workspace = true
tokio.workspace = true
strum.workspace = true
strum_macros.workspace = true
smallvec.workspace = true

ekacore = { path = "../ekacore" }
