[package]
name = "ndhcp"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
path = "src/ndhcp.rs"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
derive_more.workspace = true
ipnet.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio.workspace = true

ekacore = { path = "../ekacore" }
